--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "bots",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
-    "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
-    "sqlite3": "^5.1.7"
+    "@google/generative-ai": "^0.24.1"
   }
 }
