--- a/package.json
+++ b/package.json
@@ -1,23 +1,5 @@
 {
-  "name": "arcede-tickets",
-  "version": "1.0.0",
-  "description": "Discord Ticket Bot with Gemini AI",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
   "dependencies": {
-    "discord.js": "^14.15.3",
-    "sqlite3": "^5.1.6",
-    "express": "^4.18.2",
-    "@google/generative-ai": "^0.24.1",
-    "dotenv": "^16.3.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": ["discord", "bot", "tickets", "ai"],
-  "author": "Arcede",
-  "license": "MIT"
+    "@google/generative-ai": "^0.24.1"
+  }
 }
